multi branch support

--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Chat Dataset Editor</title>
-<style>
-  :root{--bg:#f6f7fb;--card:#fff;--accent:#0b74ff;--muted:#666}
-  body{margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:#111;display:flex;flex-direction:column;height:100vh}
-  header{background:var(--card);padding:10px 12px;display:flex;gap:8px;align-items:center;box-shadow:0 2px 6px rgba(0,0,0,0.06)}
-  select,input[type=text]{padding:8px;border-radius:6px;border:1px solid #ddd}
-  button{background:var(--accent);color:#fff;border:none;padding:8px 12px;border-radius:6px;cursor:pointer}
-  main{flex:1;display:flex;flex-direction:column;padding:12px;gap:10px}
-  .chat{flex:1;overflow:auto;background:linear-gradient(180deg,#f9fafb,#fff);padding:12px;border-radius:8px;border:1px solid #eee}
-  .bubble{max-width:80%;padding:10px;border-radius:12px;margin:8px 0;display:inline-block}
-  .user{background:#dcf8c6;align-self:flex-end}
-  .ai{background:#fff;border:1px solid #eee}
-  .meta{font-size:12px;color:var(--muted);margin-top:6px}
-  footer{background:var(--card);padding:12px;border-top:1px solid #eee;display:flex;flex-direction:column;gap:8px}
-  .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-  label{font-size:13px;color:var(--muted)}
-  .traits input{width:80px}
-  .small{font-size:12px;color:var(--muted)}
-  @media(max-width:700px){ .traits input{width:60px} .bubble{max-width:95%} header{flex-wrap:wrap} }
-</style>
+<link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
 
@@ -80,167 +62,7 @@
   </div>
 </footer>
 
-<script>
-(async function(){
-  const datasetSelect = document.getElementById('datasetSelect');
-  const chat = document.getElementById('chat');
-  const pendingLabel = document.getElementById('pendingLabel');
-  const createBtn = document.getElementById('createBtn');
-  const newDatasetInput = document.getElementById('newDatasetInput');
-  const createConfirmBtn = document.getElementById('createConfirmBtn');
-
-  let pendingPrompt = null;
-  let currentDataset = '';
-  let currentRole = 'user';
-
-
-  async function api(path, opts) {
-    const res = await fetch(path, opts);
-    return res.json();
-  }
-
-  async function loadDatasets(){
-    const r = await api('/api/datasets');
-    datasetSelect.innerHTML = '<option value="">Select dataset</option>';
-    r.datasets.forEach(s => {
-      const o = document.createElement('option');
-      o.value = s; o.textContent = s;
-      datasetSelect.appendChild(o);
-    });
-  }
-
-  async function createDataset(name){
-    const r = await api('/api/datasets', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({name})});
-    if (r.error) return alert('Create error: ' + r.error);
-    await loadDatasets();
-    datasetSelect.value = name;
-    currentDataset = name;
-    await loadRecords(name);
-  }
-
-  async function loadRecords(name){
-    if(!name) return;
-    const r = await api(`/api/datasets/${encodeURIComponent(name)}/records`);
-    renderChat(r.records || []);
-  }
-
-  function appendBubble(text, cls, meta){
-    const wrap = document.createElement('div');
-    const b = document.createElement('div');
-    b.className = 'bubble ' + cls;
-    b.innerHTML = text.replace(/\n/g,'<br/>');
-    wrap.appendChild(b);
-    if(meta){
-      const m = document.createElement('div');
-      m.className = 'meta';
-      m.textContent = meta;
-      wrap.appendChild(m);
-    }
-    chat.appendChild(wrap);
-    chat.scrollTop = chat.scrollHeight;
-  }
-
-  function renderChat(records){
-    chat.innerHTML = '';
-    for(const rec of records){
-      appendBubble(rec.prompt, 'user', `mood: ${rec.mood} emotion: ${rec.emotion} traits: ${Object.entries(rec.traits||{}).map(([k,v])=>k+':'+v).join(', ')} nsfw:${rec.nsfw}`);
-      appendBubble(rec.response, 'ai', `raw: ${rec.raw}`);
-    }
-  }
-
-  document.getElementById('saveBtn').addEventListener('click', async ()=>{
-    const role = currentRole;
-    const content = document.getElementById('content').value.trim();
-    if(!content) return alert('Type something in the box');
-
-    if(!datasetSelect.value) return alert('Select or create a dataset first');
-    currentDataset = datasetSelect.value;
-
-    const traits = {
-      trust: parseFloat(document.getElementById('trait_trust').value || 0).toFixed(2),
-      happiness: parseFloat(document.getElementById('trait_happiness').value || 0).toFixed(2),
-      romantic: parseFloat(document.getElementById('trait_romantic').value || 0).toFixed(2),
-      sad: parseFloat(document.getElementById('trait_sad').value || 0).toFixed(2),
-      angry: parseFloat(document.getElementById('trait_angry').value || 0).toFixed(2),
-      lust: parseFloat(document.getElementById('trait_lust').value || 0).toFixed(2)
-    };
-    const mood = document.getElementById('mood').value;
-    const emotion = document.getElementById('emotion').value;
-    const nsfw = document.getElementById('nsfw').checked ? 2 : 0;
-
-    if(role === 'user'){
-      // save pending prompt locally first
-      pendingPrompt = content;
-      pendingLabel.textContent = content.slice(0,40);
-      appendBubble(content, 'user', `pending - mood:${mood} emotion:${emotion}`);
-      document.getElementById('content').value = '';
-      currentRole = 'ai';
-			document.getElementById('roleLabel').textContent = currentRole.charAt(0).toUpperCase() + currentRole.slice(1);
-
-      return;
-    }
-
-    // role is ai
-    if(!pendingPrompt) return alert('No pending user prompt. First save the user message.');
-
-    // push to server as a single record containing prompt+response
-    const body = {
-      prompt: pendingPrompt,
-      response: content,
-      traits,
-      mood,
-      emotion,
-      nsfw
-    };
-    const r = await api(`/api/datasets/${encodeURIComponent(currentDataset)}/records`, {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify(body)
-    });
-    if(r.error) return alert('Save error: ' + r.error);
-    // reload records
-    pendingPrompt = null;
-    pendingLabel.textContent = 'none';
-    document.getElementById('content').value = '';
-    await loadRecords(currentDataset);
-    
-    // Toggle role automatically
-    alert(currentRole);
-    currentRole = "user";
-    document.getElementById('roleLabel').textContent = currentRole.charAt(0).toUpperCase() + currentRole.slice(1);
-
-  });
-
-  createBtn.addEventListener('click', ()=>{
-    newDatasetInput.style.display = 'inline-block';
-    createConfirmBtn.style.display = 'inline-block';
-    newDatasetInput.focus();
-  });
-
-  createConfirmBtn.addEventListener('click', async ()=>{
-    const name = newDatasetInput.value.trim();
-    if(!name) return alert('Enter a name');
-    // very simple sanitize: only allow alnum _ -
-    if(!/^[\w-]+$/.test(name)) return alert('Use letters, numbers, dash or underscore');
-    await createDataset(name);
-    newDatasetInput.value = '';
-    newDatasetInput.style.display = 'none';
-    createConfirmBtn.style.display = 'none';
-  });
-
-  datasetSelect.addEventListener('change', async ()=>{
-    const v = datasetSelect.value;
-    currentDataset = v;
-    pendingPrompt = null;
-    pendingLabel.textContent = 'none';
-    if(v) await loadRecords(v);
-    else chat.innerHTML = '';
-  });
-
-  // init
-  await loadDatasets();
-})();
-</script>
-
+<script src="js/main.js"></script>
+<script src="js/context-menu.js"></script>
 </body>
 </html>
