added download dataset button

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
     <input id="newDatasetInput" type="text" placeholder="dataset-name" style="display:none"/>
     <button id="createConfirmBtn" style="display:none">Create</button>
   </div>
-  <div style="margin-left:auto" class="small">Pending prompt: <span id="pendingLabel">none</span></div>
-  <button id="settingsBtn">⚙️</button>
+  <div style="display:flex;gap:6px;align-items:center">
+    <button id="downloadBtn">⬇️</button>
+    <button id="settingsBtn">⚙️</button>
+    <div style="margin-left:auto" class="small">Pending prompt: <span id="pendingLabel">none</span></div>
+  </div>
 </header>
 
 <main>
