added privacy button

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <div style="display:flex;gap:6px;align-items:center">
     <button id="downloadBtn">⬇️</button>
     <button id="settingsBtn">⚙️</button>
-    <button id="hideChat">👁️</button>
+    <button id="hideChat">🙈</button>
   </div>
 </header>
 
